# PageStack

./: .gitignore  PROJECT_MEMORY.md  README.md  Status_Update.md  image_pdf_tauri_starter.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  pipeline.rs  presets.rs  types.rs
src/components/: ErrorBoundary.tsx  ImageCard.tsx
src/hooks/: useDragReorder.ts  useImageQueue.ts
src/lib/: errors.ts
